--- a/gamedata/config/weapons/w_crossbow.ltx
+++ b/gamedata/config/weapons/w_crossbow.ltx
@@ -136,6 +136,10 @@ orientation             	= 0, 0, 0
 position                	= 0.0, 0.0, 0.0
 visual                   	= weapons\swmt\crossbow\wpn_crossbow_hud.ogf
 
+;время поворота HUD (сек)
+;zoom_rotate_time		= 0.5
+;rotate_time			= 0.5
+
 ;анимации
 anim_holster = holster
 anim_idle = idle
