--- a/gamedata/config/misc/effectors.ltx
+++ b/gamedata/config/misc/effectors.ltx
@@ -28,7 +28,9 @@ walk_speed     = 6.26
 
 [bobbing_effector]:bobbing_effector_ns_misery
 [wpn_bobbing_effector]:bobbing_effector
-
+crouch_k = 0.75
+;zoom_k   = 0.1
+scope_zoom_k = 0.1
 
 [monster_attack_effector]
 duality_h		= 0.01
