На плащи экзу нельзя надевать, там глюки

--- a/gamedata/config/misc/outfit.ltx
+++ b/gamedata/config/misc/outfit.ltx
@@ -870,6 +870,9 @@ immunities_sect			= sect_bandit_plash_immunities
 tech_complication          = 400
 repair_compatibility     = middle_outfit
 
+exo1 = ;
+exo2 = ;
+
 arm_set = bandit_brown
 
 [sect_bandit_plash_immunities]
