Обновил пресеты настроек графики

--- a/gamedata/config/rspec_high.ltx
+++ b/gamedata/config/rspec_high.ltx
@@ -1,67 +1,26 @@
-r2_ao on
-r2_ao_intensity 0.4
-rs_vis_distance 1.5
-r2_ssao qt_medium
-r2_ssao_mode ssdo
-r2_steep_parallax qt_medium
-r2_dof on
-r2_dof_reload on
-r2_dof_zoom on
-r2_dof_quality qt_medium
-r__geometry_lod 5
-r__detail_density 0.36
-r__detail_radius 100
-r2_soft_water on
+ph_iterations 18
+r1_dlights_clip 40
+r1_glows_per_frame 16
+r2_detail_bump on
+r2_dof_enable on
+r2_ls_squality 1
+r2_slight_fade 0.5
 r2_soft_particles on
-r__bloodmarks on
-texture_lod 0
-r__tf_aniso 12
-r2_aa qt_medium
-r2_aa_mode fxaa
-r2_sun on
-r2_sun_details off
-r2_detail_bump off
-r2_sunshafts qt_medium
-r2_sunshafts_mode volumetric
-r2_slight_fade 1.2
-ai_use_torch_dynamic_lights on
-r2_ls_squality 0.8
-r2_sun_near 35
-r2_tf_mipbias 0
-r2_gloss_factor 1
-r2_true_sun_shadows on
-r2_soft_shadows qt_medium
-r2_lights_shadow_fade qt_medium
-r2_tonemap on
-r2_sun_lumscale_amb 1.5
-cam_inert 0.0
-r2_lens_flare on
-r2_lens_dirt on
-r2_rain_drops on
-r2_puddles on
-r2_wet_surfaces on
+r2_soft_water on
+r2_ssao st_opt_medium
+r2_steep_parallax on
+r2_sun_quality st_opt_medium
+r2_sun_shafts st_opt_medium
 r2_volumetric_lights on
-r2_reflections qt_high
-r2_reflections_mode water
-r2_image_sharpening 0
-r2_volumetric_fog on
-r2_ls_depth_bias -0.00005
-r2_ls_depth_scale 1.00001
-r2_sun_depth_far_bias -0.00001
-r2_sun_depth_far_scale 1
-r2_sun_depth_near_bias -0.0001
-r2_sun_depth_near_scale 1.00004
-r2_sun_focus on
-r2_ls_bloom_threshold 1
-r2_sun_lumscale 1
-ph_iterations 50
-snd_efx off
-r2_sun_lumscale_hemi 1.
-g_dof_scope off
-r2_sun_limit 180.
-r__actor_shadow on
-r__wallmark_ttl 3000.
-r2_ssa_lod_a 96.
-r2_ssa_lod_b 64.
-g_ammunition_on_belt off
-g_music_tracks off
+r3_dynamic_wet_surfaces on
+r3_volumetric_smoke on
+r__detail_density 0.3
+r__geometry_lod 0.75
+r__supersample 1
+r__tf_aniso 8
+r__wallmark_ttl 50
+rs_skeleton_update 32
+rs_vis_distance 1
+snd_cache_size 32
+snd_targets 32
+texture_lod 0
