--- a/gamedata/config/rspec_minimum.ltx
+++ b/gamedata/config/rspec_minimum.ltx
@@ -1,66 +1,26 @@
-r2_ao on
-r2_ao_intensity 0.4
-rs_vis_distance 0.75
-r2_ssao qt_off
-r2_ssao_mode ssdo
-r2_steep_parallax qt_off
-r2_dof off
-r2_dof_reload off
-r2_dof_zoom off
-r2_dof_quality qt_off
-r__geometry_lod 5
-r__detail_density 0.6
-r__detail_radius 49
-r2_soft_water off
-r2_soft_particles off
-r__bloodmarks off
-texture_lod 0
-r__tf_aniso 3
-r2_aa qt_off
-r2_aa_mode fxaa
-r2_sun off
-r2_sun_details off
+ph_iterations 18
+r1_dlights_clip 20
+r1_glows_per_frame 16
 r2_detail_bump off
-r2_sunshafts qt_off
-r2_sunshafts_mode screen_space
-r2_slight_fade 0.3
-ai_use_torch_dynamic_lights off
+r2_dof_enable off
 r2_ls_squality 0.5
-r2_sun_near 20
-r2_tf_mipbias 0.3
-r2_gloss_factor 1
-r2_true_sun_shadows off
-r2_soft_shadows qt_off
-r2_lights_shadow_fade qt_off
-r2_tonemap off
-r2_sun_lumscale_amb 1.5
-cam_inert 0.0
-r2_lens_flare off
-r2_lens_dirt off
-r2_rain_drops off
-r2_puddles off
-r2_wet_surfaces off
+r2_slight_fade 0.5
+r2_soft_particles off
+r2_soft_water off
+r2_ssao st_opt_off
+r2_steep_parallax off
+r2_sun_quality st_opt_low
+r2_sun_shafts st_opt_off
 r2_volumetric_lights off
-r2_reflections qt_off
-r2_reflections_mode water
-r2_image_sharpening 0
-r2_volumetric_fog off
-r2_ls_depth_bias -0.00005
-r2_ls_depth_scale 1.00001
-r2_sun_depth_far_bias -0.00001
-r2_sun_depth_far_scale 1
-r2_sun_depth_near_bias -0.0001
-r2_sun_depth_near_scale 1.00004
-r2_sun_focus on
-r2_ls_bloom_threshold 1
-r2_sun_lumscale 1
-ph_iterations 50
-snd_efx off
-r2_sun_lumscale_hemi 1.
-g_dof_scope off
-r2_sun_limit 180.
-r__actor_shadow on
-r2_ssa_lod_a 96.
-r2_ssa_lod_b 64.
-g_ammunition_on_belt off
-g_music_tracks off
+r3_dynamic_wet_surfaces on
+r3_volumetric_smoke off
+r__detail_density 0.7
+r__geometry_lod 0.5
+r__supersample 1
+r__tf_aniso 1
+r__wallmark_ttl 20
+rs_skeleton_update 32
+rs_vis_distance 0.5
+snd_cache_size 16
+snd_targets 16
+texture_lod 3
