--- a/gamedata/config/external.ltx
+++ b/gamedata/config/external.ltx
@@ -29,18 +29,7 @@ wpn_bobbing = true
 ; и статиков condition_progess_bar и cell_item_text.
 show_inv_item_condition = true
 
-; Включить фикс восстанавливающий солнце.
-; Как побочный эффект при включении - может возникать необновление погоды, чтобы его избежать нужно устанавливать погоду не ранее чем на первом апдейте актора, примерно так:
-;	level.add_call(
-;		function() return true end,
-;		function() level.set_weather(что-то там) end
-;	)
-; Либо, что ещё лучше, использовать скриптовый погодный менеджер из ОГСЕ.
-restore_sun_fix = true
-
-; Вычисление и использование правильного положения солнца, вместо позиции из погодных конфигов.
-; !Эту опцию желательно использовать в ОГСЕ и прочих модах с полностью скриптовым менеджером погоды!
-; При использовании со стандартным погодным менеджером может получиться эффект "вечной ночи"
+; Вычисление и использование правильного положения солнца, вместо позиции из погодных конфигов (для ТЧ-погоды, в случае использования ЗП-погоды - не отключаемо)
 dynamic_sun_movement = true
 
 ; Убирает возможность назначать альтернативные кнопки. Т.е. убирает второй
@@ -96,10 +85,7 @@ outfit_af = true
 ; Отключает возможность смены уровня сложности. Будет единственный уровень сложности, тот, который стоит по умолчанию, т.е. мастер.
 gd_master_only = false
 
-; Использовать старый режим для отрисовки экранов загрузки (отключить полноэкранные заставки)
-use_legacy_load_screens = false
-
-; Включить авторастягиваемые прицельные сетки. Для этой опции текстуры прицельных сеток должны иметь разрешение 1600x1000.
+; Включить авторастягиваемые прицельные сетки. Для этой опции текстуры прицельных сеток должны иметь разрешение 1600x1000 (либо любое другое с таким же соотношением?).
 ; Текстуры сеток будут автоматически подстраиваться под любое разрешение экрана.
 scope_textures_autoresize = true
 
@@ -150,7 +136,7 @@ show_objectives_ondemand = false
 pickup_check_overlaped = true
 
 ; Упрощенный режим стрельбы сталкеров. Не будут рисоваться партиклы гильз, дыма
-; и при стрельбе у них не будет отдачи.
+; и при стрельбе у них не будет отдачи. Соотв. стрелять они будут точнее.
 npc_simplified_shooting = true
 
 ; Включить автоперезарядку когда в оружии закончились патроны.
@@ -251,3 +237,11 @@ capture_force  = 6500  ; max force for holding tagett
 [stalker_capture]:actor_capture
 pull_distance  = 2.4 ;5 ; max distance taget can be puled
 pull_force_factor = 10
+
+
+; Чтение patrol_path из ltx файлов напрямую
+; Формат файлов такой же, как выдает acdc при распаковке.
+; При загрузке, пути из файла будут заменять пути из all.spawn с таким же именем.
+; Можно вообще убрать пути из своего all.spawn и все перенести в ltx файлы, для удобства.
+;[engine_custom_spawn]
+;waypoints_file = <name_of_file.ltx> ; путь к файлу в $game_config$
