--- a/gamedata/config/weapons/w_g36.ltx
+++ b/gamedata/config/weapons/w_g36.ltx
@@ -177,6 +177,10 @@ scope_zoom_factor 					= 1.0	;оптика (для сквозных 3D прицелов = 1.0; обычные те
 second_scope_zoom_factor 			= 1.0	;коллиматор
 ;KRodin: scope_lense_fov_factor = 0.2 					;(=2.0 - уменьшает)
 scope_lense_fov_factor = 20					;(уменьшая - увеличиваем кратность)
+
+; Худ фов во время прицеливания, чтобы ствол был близко к камере и не залазил в камеру при выстреле
+scope_lense_hud_fov = 0.15
+
 ;KD: для встроенной оптики ставить ironsight_zoom_factor должен быть равен scope_zoom_factor; избыточен для некоторых типов оружия, но и вреда от него в этом случае тоже не будет
 ;НАДО задвинуть линзу вглубь прицела чтобы не обсчитывало зря (когда не целишься)
 ;?как теперь рассчитать кратность?
@@ -262,6 +266,7 @@ anim_reload			= reload
 anim_draw			= draw
 anim_holster		= holster					;shoot
 anim_shoot			= shoot
+anim_shoot_speed_k			= 999
 anim_idle_sprint	= idle_sprint_w_gl			;idle_sprint
 			
 ;анимации с подключенным подствольником
@@ -281,16 +286,17 @@ anim_reload_gl			= reload_w_gl
 anim_draw_gl			= draw_w_gl
 anim_holster_gl			= holster_w_gl
 anim_shoot_gl			= shoot_w_gl
+anim_shoot_gl_speed_k			= 999
 
 
 ;;;;;;;;;;;;;;;;;;;;;;Альтернативное прицеливание ОГСР через встроенный коллиматор 36 (штатный механический прицел)
 ;смещения HUD для режима приближения (прицеливание без увеличения)
 ;ствол без установленного гранатомёта
-second_zoom_offset							= -0.137400,0.028000,-0.426000
+second_zoom_offset							= -0.137600,0.028300,-0.414800
 second_zoom_rotate_x						= 0.060700
 second_zoom_rotate_y						= 0.035080
 ;ствол с установленным гранатомётом в основном режиме (ствол)
-second_grenade_normal_zoom_offset			= -0.137400,0.028000,-0.426000
+second_grenade_normal_zoom_offset			= -0.137600,0.028300,-0.414800
 second_grenade_normal_zoom_rotate_x		= 0.060700
 second_grenade_normal_zoom_rotate_y		= 0.035080
 ;режим подствольника (положение д/б одинаковым - у подствола свой прицел)
@@ -299,11 +305,11 @@ second_grenade_zoom_rotate_x				= 0.061600
 second_grenade_zoom_rotate_y				= 0.058400
 ;;;;;;;;;;;;;;;;;;;;;;Прицеливание через оптику (перекрывается текстуроЙ)
 ;прицеливание по умолчанию (по-старому, через "оптику" - ТЕКСТУРОЙ), альтернативное ОГСЕ (мех.прицел, МОДЕЛЬЮ) сбрасывается при установке любого аддона, включая ПЫС-подствол)
-zoom_offset			= -0.137400,0.071000,-0.456000
+zoom_offset			= -0.137230,0.071360,-0.401001
 zoom_rotate_x		= 0.060700
 zoom_rotate_y		= 0.034080
 ;режим ствола
-grenade_normal_zoom_offset		= -0.137400,0.071000,-0.456000
+grenade_normal_zoom_offset		= -0.137230,0.071360,-0.401001
 grenade_normal_zoom_rotate_x		= 0.060700
 grenade_normal_zoom_rotate_y		= 0.034080
 ;режим подствольника (положение д/б одинаковым - у подствола свой прицел)
