Превратил тепловизор в ПНВ

--- a/gamedata/config/misc/items.ltx
+++ b/gamedata/config/misc/items.ltx
@@ -1297,18 +1297,18 @@ cost			= 10000
 
 nightvision_sect    = effector_nightvision_grey
 
-[device_termovizor]:device_pnv_1
-$spawn 			= "device\device_termovizor"
-inv_name		= item_termovizor
-inv_name_short	= item_termovizor
-description		= item_termovizor_description
-inv_weight		= 1.2
+[device_termovizor]:device_pnv_2
+;$spawn 			= "device\device_termovizor"
+;inv_name		= item_termovizor
+;inv_name_short	= item_termovizor
+;description		= item_termovizor_description
+;inv_weight		= 1.2
 
-inv_grid_x		= 18
-inv_grid_y		= 29
-cost			= 15000
+;inv_grid_x		= 18
+;inv_grid_y		= 29
+;cost			= 15000
 
-nightvision_sect    = thermal
+;nightvision_sect    = thermal
 
 ;---------------------------------------------------------------------------------------------
 ;—ÂÍˆËË ÃŒÕ“»–”≈ÃŒ√Œ › «Œ ¿– ¿—¿
