spawns из gamedata_28.06.2019

--- a/gamedata/spawns/sources/alife_k01_darkscape_ogse.ltx
+++ b/gamedata/spawns/sources/alife_k01_darkscape_ogse.ltx
@@ -10067,3 +10067,638 @@ fixed_bones = link
 
 
 
+[10699]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone1
+position = 70.97,-2.07,-137.61
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3172
+distance = 2.0999999
+level_vertex_id = 477232
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+cfg = scripts\jek@n\restrictions\dar_samogon_trance_zone1.ltx
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 18
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+[10700]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone2
+position = 41.32,-2.63,-149.78
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3051
+distance = 2.0999999
+level_vertex_id = 441488
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+cfg = scripts\jek@n\restrictions\dar_samogon_trance_zone2.ltx
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 18
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+[10701]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone3
+position = 60.62,-1.88,-186.96
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3041
+distance = 2.0999999
+level_vertex_id = 464864
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+cfg = scripts\jek@n\restrictions\dar_samogon_trance_zone3.ltx
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 18
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+[10702]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone4
+position = 23.15,-0.73,-205.16
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3042
+distance = 2.0999999
+level_vertex_id = 419927
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+cfg = scripts\jek@n\restrictions\dar_samogon_trance_zone4.ltx
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 18
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+[10703]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone5
+position = -30.31,-0.62,-199.79
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3052
+distance = 2.0999999
+level_vertex_id = 357167
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+cfg = scripts\jek@n\restrictions\dar_samogon_trance_zone5.ltx
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 18
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+
+[10704]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone6
+position = -57.05,0.80,-218.21
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3052
+distance = 2.0999999
+level_vertex_id = 325689
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+cfg = scripts\jek@n\restrictions\dar_samogon_trance_zone6.ltx
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 18
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+
+[10705]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone7
+position = -65.87,0.60,-250.72
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3044
+distance = 2.0999999
+level_vertex_id = 316217
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+cfg = scripts\jek@n\restrictions\dar_samogon_trance_zone7.ltx
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 18
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+[10706]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone_all
+position = -73.38,0.15,-266.37
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3045
+distance = 2.0999999
+level_vertex_id = 307977
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+cfg = scripts\jek@n\restrictions\dar_samogon_trance_zone_all.ltx
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 5
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+[10707]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone8
+position = 52.27,-2.90,-165.55
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3051
+distance = 2.0999999
+level_vertex_id = 455214
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+active = nil
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 5
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+
+[10708]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone9
+position = 40.82,-1.32,-193.69
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3042
+distance = 2.0999999
+level_vertex_id = 440576
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+active = nil
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 7
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+[10709]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone10
+position = -4.16,-0.81,-202.98
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3051
+distance = 2.0999999
+level_vertex_id = 387590
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+active = nil
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 10
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+[10710]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone1_1
+position = 70.97,-2.07,-137.61
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3172
+distance = 2.0999999
+level_vertex_id = 477232
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+active = nil
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 5
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+[10711]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone2_1
+position = 41.32,-2.63,-149.78
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3051
+distance = 2.0999999
+level_vertex_id = 441488
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+active = nil
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 5
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+[10712]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone3_1
+position = 60.62,-1.88,-186.96
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3041
+distance = 2.0999999
+level_vertex_id = 464864
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+active = nil
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 5
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+[10713]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone4_1
+position = 23.15,-0.73,-205.16
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3042
+distance = 2.0999999
+level_vertex_id = 419927
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+active = nil
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 5
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+[10714]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone5_1
+position = -30.31,-0.62,-199.79
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3052
+distance = 2.0999999
+level_vertex_id = 357167
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+active = nil
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 5
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+
+[10715]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone6_1
+position = -57.05,0.80,-218.21
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3052
+distance = 2.0999999
+level_vertex_id = 325689
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+active = nil
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 5
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+[10716]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = dar_samogon_trance_zone7_1
+position = -65.87,0.60,-250.72
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3044
+distance = 2.0999999
+level_vertex_id = 316217
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+active = nil
+
+END
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 5
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+
