--- a/gamedata/spawns/sources/way_k01_darkscape_ogse.ltx
+++ b/gamedata/spawns/sources/way_k01_darkscape_ogse.ltx
@@ -2293,6 +2293,91 @@ p0:level_vertex_id = 185320
 
 
 
+[dar_samogon_trance_zone1_point]
+points = p0
+p0:name = wp00
+p0:flags = 0x1
+p0:position = 76.39,-1.93,-135.74
+p0:game_vertex_id = 3172
+p0:level_vertex_id = 484341
+
+[dar_samogon_trance_zone2_point]
+points = p0
+p0:name = wp00
+p0:flags = 0x1
+p0:position = 41.32,-2.63,-149.78
+p0:game_vertex_id = 3051
+p0:level_vertex_id = 441488
+
+[dar_samogon_trance_zone3_point]
+points = p0
+p0:name = wp00
+p0:flags = 0x1
+p0:position = 60.62,-1.88,-186.96
+p0:game_vertex_id = 3041
+p0:level_vertex_id = 464864
+
+[dar_samogon_trance_zone4_point]
+points = p0
+p0:name = wp00
+p0:flags = 0x1
+p0:position = 23.15,-0.73,-205.16
+p0:game_vertex_id = 3042
+p0:level_vertex_id = 419927
+
+[dar_samogon_trance_zone5_point]
+points = p0
+p0:name = wp00
+p0:flags = 0x1
+p0:position = -30.31,-0.62,-199.79
+p0:game_vertex_id = 3052
+p0:level_vertex_id = 357167
+
+[dar_samogon_trance_zone6_point]
+points = p0
+p0:name = wp00
+p0:flags = 0x1
+p0:position = -57.05,0.80,-218.21
+p0:game_vertex_id = 3052
+p0:level_vertex_id = 325689
+
+[dar_samogon_trance_zone7_point]
+points = p0
+p0:name = wp00
+p0:flags = 0x1
+p0:position = -65.87,0.60,-250.72
+p0:game_vertex_id = 3044
+p0:level_vertex_id = 316217
+
+
+[dar_samogon_trance_point_end]
+points = p0
+p0:name = wp00
+p0:flags = 0x1
+p0:position = -75.58,0.79,-255.87
+p0:game_vertex_id = 3050
+p0:level_vertex_id = 305693
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
