--- a/gamedata/spawns/sources/way_l09_deadcity_ogse.ltx
+++ b/gamedata/spawns/sources/way_l09_deadcity_ogse.ltx
@@ -2315,8 +2315,21 @@ p0:game_vertex_id = 3617
 p0:level_vertex_id = 524464
 
 
+[cit_zapiska2_mob_point]
+points = p0
+p0:name = wp00|sig=arrived
+p0:flags = 0x1
+p0:position = -99.63, 16.08, 434.48
+p0:game_vertex_id = 3354
+p0:level_vertex_id = 330844
 
-
+[cit_zapiska3_mob_point]
+points = p0
+p0:name = wp00|sig=arrived
+p0:flags = 0x1
+p0:position = -34.94, 11.18, 531.16
+p0:game_vertex_id = 3247
+p0:level_vertex_id = 440272
 
 
 
