--- a/gamedata/spawns/sources/alife_l09_deadcity_ogse.ltx
+++ b/gamedata/spawns/sources/alife_l09_deadcity_ogse.ltx
@@ -26167,12 +26167,213 @@ restrictor_type = 3
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 
+[9120]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = city_samogon_zapiska_zone1
+position = -107.59, 12.88, 431.54
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3357
+distance = 2.0999999
+level_vertex_id = 318582
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+active = nil
+END
+story_id = 7399
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 5
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+[9121]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = city_samogon_zapiska_zone2
+position = -77.43, 11.78, 541.61
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3249
+distance = 2.0999999
+level_vertex_id = 367497
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+active = nil
+END
+story_id = 7400
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 5
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+[9122]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = city_samogon_zapiska_zone3
+position = -34.94, 11.18, 531.16
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3247
+distance = 2.0999999
+level_vertex_id = 440272
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+active = nil
+END
+story_id = 7401
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 5
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+
+
+[9123]
+
+; cse_abstract properties
+section_name = inventory_box
+name = city_tower_box
+position = -172.55,22.67,487.19
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6895
+
+; cse_alife_object properties
+game_vertex_id = 3879
+distance = 1.4
+level_vertex_id = 212689
+object_flags = 0xffffff3f
+custom_data = <<END
+[logic]
+cfg = scripts\jek@n\city\city_tower_box.ltx
+
+[spawn]
+book_12
+
+END
+story_id = 7136
+
+; cse_visual properties
+;visual_name = physics\box\inv_safe
+visual_name = physics\equipment_cache\equipment_pipe_02_case
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 
 
+[9124]
+
+; cse_abstract properties
+section_name = space_restrictor
+name = city_samogon_zapiska_zone4
+position = -172.55,22.67,487.19
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6906
+
+; cse_alife_object properties
+game_vertex_id = 3879
+distance = 2.0999999
+level_vertex_id = 212689
+object_flags = 0xffffff3e
+custom_data = <<END
+[logic]
+active = nil
+END
+story_id = 7402
+
+; cse_shape properties
+shapes = 1
+shape_0:type = sphere
+shape_0:offset = 0,0,0
+shape_0:radius = 5
+
+; cse_alife_space_restrictor properties
+restrictor_type = 3
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 
 
+[9125]
+
+; cse_abstract properties
+section_name = inventory_box
+name = city_samogon_treasure
+position = 110.79,-0.84,65.12
+direction = 0, 0, 0
+id = 65535
+version = 118
+script_version = 7
+spawn_id = 6895
+
+; cse_alife_object properties
+game_vertex_id = 3858
+distance = 1.4
+level_vertex_id = 627388
+object_flags = 0xffffff3f
+custom_data = <<END
+[logic]
+cfg = scripts\jek@n\city\city_samogon_treasure.ltx
+
+[spawn]
+apparat
+
+END
+story_id = 7403
+
+; cse_visual properties
+visual_name = physics\box\box_1c
+
+;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 
 
